--- a/src/css/style.css
+++ b/src/css/style.css
@@ -756,12 +756,26 @@ color: #E12D3A;
     top: 6%;
     left: 78%;
     color: #fff;
-    font-size: 13px;
+    font-size: 11px;
     transform: translate(-50%, -50%);
     width: 80px;
     height: 30px;
     padding: 5px 5px 5px 8px;
     background: #e87775;
+}
+
+.card-imgtext{
+  position: absolute;
+  top: 6%;
+  left: 49%;
+  color: #fff;
+  font-size: 12px;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 30px;
+  padding: 5px 5px 5px 8px;
+  text-align: center;
+  margin: 0px auto;
 }
 
 
@@ -1339,6 +1353,14 @@ cursor: pointer;
 
   .o_price1 {
     font-size: 16px;
+    color: #757575;
+    font-weight: 400;
+    text-decoration: line-through;
+  }
+
+
+  .p_price1 {
+    font-size: 12px;
     color: #757575;
     font-weight: 400;
     text-decoration: line-through;
