--- a/src/css/ServicesList.css
+++ b/src/css/ServicesList.css
@@ -1,19 +1,19 @@
-.service-list {
-    display: flex;
-    flex-wrap: wrap;
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); /* Slightly wider */
     gap: 20px;
-
+    justify-content: center;
+    padding: 20px;
 }
 
 .service-card{
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 15px !important;
     padding: 10px;
     max-width: 350px;
     min-height: 270px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-bottom-right-radius: unset;
-    border-bottom-left-radius: unset;
+    margin-bottom: 20px;
+    box-shadow: 15px 10px 15px 5px rgba(0, 0, 0, 0.12);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .service-images img {
@@ -21,6 +21,7 @@
     height: auto;
     border-radius: 8px;
     margin-bottom: 10px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .service-card h3 {
@@ -41,3 +42,10 @@
     background-color: rgb(20, 148, 110);
     color: #ffffff  !important;
 }
+
+
+.color-darkpink{
+  color: #ee4e52 !important;  
+}
+
+
